<resources>
    <string name="app_name">isikook</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="new_account">ÜYE OL</string>
    <string name="username">İsim Soyisim</string>
    <string name="mail">Işık Mail</string>
    <string name="password">Şifre</string>
    <string name="olustur">HESAP OLUŞTUR</string>
    <string name="giris">Giriş Yap</string>
    <string name="todo">TODO</string>
    <string name="kitap_ara">Kitap aramaya başlayın...</string>
    <string name="welcome">welcome to your bookstore</string>
    <string name="ders_kitap">Bölüm Ders Kitapları</string>
    <string name="okuma_kitap">OKUMA KİTAPLARI</string>
    <string name="aldiklarim">Aldıklarım</string>
    <string name="cuzdan">Cüzdanım</string>
    <string name="sattiklarim">Sattıklarım</string>
    <string name="favorilerim">Favorilerim</string>
    <string name="books">Kitaplarım</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="logout">Çıkış Yap</string>
    <string name="hesabim">HESABIM</string>
    <string name="your_bookstore">your bookstore</string>
    <string name="title_activity_settings">Settings</string>
    <string name="arama_yapin">ARAMA YAPIN</string>
    <string name="arama">ARAMA</string>
    <string name="ya_da">ya da</string>
    <string name="kitap_ad">Kitap Adı</string>
    <string name="ilgili_ders">İlgili Ders</string>
    <string name="fiyat">Fiyat</string>
    <string name="foto_ekle">Fotoğraf yükle</string>
    <string name="yazar">Yazar</string>
    <string name="fot_cek">Fotoğraf Çek</string>
    <string name="isim_soyisim">İsim Soyisim</string>
    <string name="mail_adresi">Mail Adresi</string>
    <string name="adres_bilgileri">Adres Bilgileri</string>
    <string name="g_ncelle">GÜNCELLE</string>
    <string name="mevcut_ifreniz">Mevcut Şifreniz</string>
    <string name="yeni_ifreniz">Yeni Şifreniz</string>
    <string name="siparis_ver">Sipariş Ver</string>
    <string name="adresGir">Adres:</string>
    <string name="kategori_se">Kategori seç</string>
    <string name="sat_n_al">Satın Al</string>
    <string name="y_kle">Yükle</string>

</resources>
