<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SifreAyarlariActivity">

    <include layout="@layout/actionbar"
        android:id="@+id/actionbarSifreAyarlari" />


    <SearchView
        android:id="@+id/search_button"
        android:layout_below="@+id/actionbarSifreAyarlari"
        android:layout_width="354dp"
        android:layout_height="64dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="47dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="80dp"
        android:background="@color/colorGrey"
        android:layout_marginStart="80dp" />
    <Button
        android:layout_below="@+id/actionbarSifreAyarlari"
        android:id="@+id/btnMenu"
        android:layout_width="66dp"
        android:layout_height="59dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/menuicon" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/homeicon"
        android:layout_marginTop="550dp"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/button_account"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/accounticon"/>

    <Button
        android:id="@+id/button_camera"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/cameraicon"
        android:layout_marginTop="550dp"
        android:layout_marginStart="130dp" />


    <Button
        android:id="@+id/button_bildirim"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/bildirimicon"
        android:layout_marginTop="550dp"
        android:layout_marginStart="210dp" />


    <TextView
        android:id="@+id/isimgir"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:hint="İsim Soyisim Girin"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/isim"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="69dp"
        android:layout_toRightOf="@+id/mevcutSifre"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mevcutSifre"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isimgir"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:hint="@string/mevcut_ifreniz"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mevcutsifrem"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isim"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/mevcutSifre"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yeniSifre"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mevcutSifre"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:hint="@string/yeni_ifreniz"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/yeniSifrem"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mevcutsifrem"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/yeniSifre"
        android:textColor="@color/colorIsik"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttong2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yeniSifre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/g_ncelle"
        android:textColor="@android:color/white"
        android:background="@color/colorIsik"/>

</RelativeLayout>